feat: add page load logic

--- a/conf.yaml
+++ b/conf.yaml
@@ -1,8 +1,8 @@
 whisper:
-  model: turbo
-  language: en
+  model:
+  language:
 
 gpt:
-  platform: "silicon"
-  apiKey: "sk-pwnyrdnbibbzswbntetohoydlwbetknqzlrkigimzzrmyifi"
-  model: "Qwen/Qwen2.5-72B-Instruct"
+  platform:
+  apiKey:
+  model:
